cleanup and naming consistency

--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,5 +1,5 @@
 ######################################################################
-# EFA 4.0.0.0 RELEASE NOTES
+# eFa 4.0.0.0 RELEASE NOTES
 ######################################################################
 # Copyright (C) 2016  https://efa-project.org
 #
@@ -17,9 +17,9 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #######################################################################
 
-Welcome to EFA Version 4.0.0.0!
+Welcome to eFa Version 4.0.0.0!
 
-Many thanks goes to the developers of EFA and maintainers of all
+Many thanks goes to the developers of eFa and maintainers of all
 3rd party packages!
 #######################################################################
 
