--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
@@ -20,3 +20,66 @@ Email: Courriel
 'Please enter an email address for important notifications': 'Merci de saisir une adresse email pour les notifications importantes'
 'IPv4 Address': 'Adresse IPv4'
 'Please enter a valid IPv4 address': 'Merci de saisir une adresse IPv4 valide'
+'Please enter a valid IPv4 address': 'Merci de saisir une adresse IPv4 correcte'
+'IPv4 Netmask': 'Masque IPv4'
+'Please enter a valid IPv4 netmask': 'Merci de saisir un masque IPv4 correcte'
+'Please enter a valid IPv4 gateway': 'Merci de saisir une passerelle IPv4 correcte'
+'IPv4 Gateway': 'Passerelle IPv4'
+'Do you want to set a static IPv4 address?': 'Voulez-vous déterminer une adresse IPv4 statique ?'
+'Yes': 'Oui'
+'No': 'Non'
+'Do you want to set a static IPv6 address?': 'Voulez-vous déterminer une adresse IPv6 statique ?'
+'Configure IPv6': 'Configurer IPv6'
+'Please enter a valid IPv6 address': 'Merci de saisir une adresse IPv6 correcte'
+'IPv6 Address': 'Adresse IPv6'
+'Please enter a valid IPv6 mask': 'Merci de saisir un masque IPv6 correcte'
+'IPv6 Mask': 'Masque IPv6'
+'Please enter a valid IPv6 gateway': 'Merci de saisir une passerelle IPv6 correcte'
+'IPv6 Gateway': 'Passerelle IPv6'
+'Do you want to enable full DNS Recursion?': 'Voulez-vous activer la récursivité DNS complète ?'
+'Configure DNS Recursion': 'Configurer la récursivité DNS'
+'Please enter the primary DNS address': 'Merci de saisir l''adresse du serveur DNS primaire'
+'Primary DNS': 'DNS primaire'
+'Please enter the secondary DNS address': 'Merci de saisir l''adresse du serveur DNS secondaire'
+'Secondary DNS': 'DNS secondaire'''accès à l''interface d''administration web'
+'Web Admin Username': 'Nom d''utilisateur administrateur pour l''interface d''administration web'
+'Please enter the web admin password': 'Merci de saisir le mot de passe pour l'accès à l''interface d''administration web'
+'Please re-enter the web admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l''accès à l''interface d''administration web'
+'Web Admin Password': 'Mot de passe administrateur pour l''interface d''administration web'
+'Please enter the username for the admin console interface': 'Merci de saisir le mot de passe pour l''accès à la console d''administration'
+'Console Admin Username': 'Nom d'utilisateur administrateur pour la console d''administration'
+'Please enter the console admin password': 'Merci de saisir le mot de passe pour l'accès à la console d'administration'
+'Please re-enter the console admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l'accès à la console d''administration'
+'Console Admin Password': 'Mot de passe administrateur pour la console d''administration'
+'Do you want to install hypervisor tools for your hypervisor?': 'Voulez-vous installer les outils additionnels pour votre hyperviseur ?'
+'Configure Hypervisor Tools': 'Configurer les outils additionnels pour votre hyperviseur'
+'Is the host set to UTC time?': 'L''hôte est-il réglé sur l'heure UTC ? '
+'Configure UTC Time': 'Configurer l''heure UTC'
+Timezone: 'Fuseau Horaire'
+'Timezone Selection': 'Sélection du Fuseau Horaire'
+'Please enter the IP or hostname of the local mail server': 'Merci de saisir l''IP ou le nom d'hôte du serveur de messagerie local'
+'Local Mail Server': 'Serveur de messagerie local'
+'Please enter your IANA country code': 'Merci de saisir votre code pays IANA [FR]'
+'IANA Code': 'Code pays IANA [FR]'
+'Please enter your organization name (No spaces, dots, or underscores)': 'Merci de saisir le nom de votre organisation (espaces, points ou underscores interdits) '
+'Organization Name': 'Nom de votre organisation'
+'Enable Recursion': 'Activer la récursivité'
+'DNS Primary Address': 'Adresse du serveur DNS primaire'
+'Set DNS': 'Configurer DNS'
+'DNS Secondary Address': 'Adresse du serveur DNS secondaire'
+'Configure IPv4': 'Configurer IPv4'
+'Set IP Address': 'Déterminer l''adresse IP'
+'Set IP Netmask': 'Déterminer le masque'
+'Set IP Gateway': 'Déterminer la passerelle'
+'Host is UTC': 'L''hôte est configuré sur l'heure UTC'
+'Set IP Mask': 'Déterminer le masque'
+'IANA Country Code': 'Code pays IANA [FR]'
+'IPv4 Netmask:' : 'Masque IPv4 :'
+'IPv4 Gateway:' : 'Passerelle IPv4 :'
+'IPv6 Mask': 'Masque IPv6 :'
+'IPv6 Gateway:' : 'Passerelle IPv6 :'
+'Web Admin Username:': 'Nom d''utilisateur administrateur pour l''interface d''administration web :'
+'Web Admin Password:': 'Mot de passe administrateur pour l''interface d''administration web :'
+'Console Admin Username:': 'Nom d''utilisateur administrateur pour la console d''administration :'
+'Console Admin Password:': 'Mot de passe administrateur pour la console d''administration :'
+'Server Mail Locale:' 'Serveur de messagerie local :'
