Fix sv translation
Former-commit-id: 6088839e42f9c874de9fedb2b0f7a59443841afa [formerly fce1217d4ad09c25cf813a19fbce54c0db47588e]
Former-commit-id: f0ea121780336c24998e68b126e26cde85a8ab1a

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.sv.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.sv.yml
@@ -56,7 +56,7 @@ Timezone: Tidzon
 'Enable Recursion': 'Aktivera rekursion'
 'DNS Primary Address': 'Primär DNS adress'
 'Set DNS': 'Ställ in DNS'
-'DNS Secondary Address': Sekundär DNS Adress'
+'DNS Secondary Address': 'Sekundär DNS Adress'
 'Configure IPv4': 'Konfigurera IPv4'
 'Set IP Address': 'Ställ in IP Adress'
 'Set IP Netmask': 'Ställ in Nätmask'
@@ -66,7 +66,6 @@ Timezone: Tidzon
 'IANA Country Code': 'IANA Lands kod'
 'IPv4 Netmask:' : 'IPv4 Nätmask:'
 'IPv4 Gateway:' : 'IPv4 Gateway:'
-'IPv6 Mask': 'IPv6 Mask:'
 'IPv6 Gateway:' : 'IPv6 Gateway:'
 'Web Admin Username:': 'Web Admin Användarnamn:'
 'Web Admin Password:': 'Web Admin Lösenord:'
