sv fixes and cleanup
Former-commit-id: f7f9de1926a425815ed0bdbeac7c16e86580767d

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.sv.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.sv.yml
@@ -64,8 +64,4 @@ Timezone: Tidzon
 'Set IP Mask': 'Ställ in IP-mask'
 'IANA Country Code': 'IANA Lands kod'
 'IPv6 Gateway:': 'IPv6 Gateway:'
-'Web Admin Username:': 'Web Admin Användarnamn:'
-'Web Admin Password:': 'Web Admin Lösenord:'
-'Console Admin Username:': 'Konsoll Admin Användarnamn:'
-'Console Admin Password:': 'Konsoll Admin Lösenord:'
-'Server Mail Locale:' 'Mailserver Region:'
+'Server Mail Locale:': 'Mailserver Region:'
