--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
@@ -27,50 +27,50 @@ Email: Email
 'Do you want to set a static IPv4 address?': 'Вы хотите установить статический адрес IPv4?'
 'Yes': 'Да'
 'No': 'Нет'
-'Do you want to set a static IPv6 address?': 'Do you want to set a static IPv6 address?'
-'Configure IPv6': 'Configure IPv6'
-'Please enter a valid IPv6 address': 'Please enter a valid IPv6 address'
-'IPv6 Address': 'IPv6 Address'
-'Please enter a valid IPv6 mask': 'Please enter a valid IPv6 mask'
-'IPv6 Mask': 'IPv6 Mask'
-'Please enter a valid IPv6 gateway': 'Please enter a valid IPv6 gateway'
-'IPv6 Gateway': 'IPv6 Gateway'
-'Do you want to enable full DNS Recursion?': 'Do you want to enable full DNS Recursion?'
-'Configure DNS Recursion': 'Configure DNS Recursion'
-'Please enter the primary DNS address': 'Please enter the primary DNS address'
-'Primary DNS': 'Primary DNS'
-'Please enter the secondary DNS address': 'Please enter the secondary DNS address'
-'Secondary DNS': 'Secondary DNS'
-'Please enter the username for the admin web interface': 'Please enter the username for the admin web interface'
-'Web Admin Username': 'Web Admin Username'
-'Please enter the web admin password': 'Please enter the web admin password'
-'Please re-enter the web admin password': 'Please re-enter the web admin password'
-'Web Admin Password': 'Web Admin Password'
-'Please enter the username for the admin console interface': 'Please enter the username for the admin console interface'
-'Console Admin Username': 'Console Admin Username'
-'Please enter the console admin password': 'Please enter the console admin password'
-'Please re-enter the console admin password': 'Please re-enter the console admin password'
-'Console Admin Password': 'Console Admin Password'
-'Do you want to install hypervisor tools for your hypervisor?': 'Do you want to install hypervisor tools for your hypervisor?'
-'Configure Hypervisor Tools': 'Configure Hypervisor Tools'
-'Is the host set to UTC time?': 'Is the host set to UTC time?'
-'Configure UTC Time': 'Configure UTC Time'
-Timezone: Timezone
-'Timezone Selection': 'Timezone Selection'
-'Please enter the IP or hostname of the local mail server': 'Please enter the IP or hostname of the local mail server'
-'Local Mail Server': 'Local Mail Server'
-'Please enter your IANA country code': 'Please enter your IANA country code'
-'IANA Code': 'IANA Code'
-'Please enter your organization name (No spaces, dots, or underscores)': 'Please enter your organization name (No spaces, dots, or underscores)'
-'Organization Name': 'Organization Name'
-'Enable Recursion': 'Enable Recursion'
-'DNS Primary Address': 'DNS Primary Address'
-'Set DNS': 'Set DNS'
-'DNS Secondary Address': 'DNS Secondary Address'
-'Configure IPv4': 'Configure IPv4'
-'Set IP Address': 'Set IP Address'
-'Set IP Netmask': 'Set IP Netmask'
-'Set IP Gateway': 'Set IP Gateway'
-'Host is UTC': 'Host is UTC'
-'Set IP Mask': 'Set IP Mask'
-'IANA Country Code': 'IANA Country Code'
+'Do you want to set a static IPv6 address?': 'Вы хотите установить статический адрес IPv6?'
+'Configure IPv6': 'Настройка IPv6'
+'Please enter a valid IPv6 address': 'Введите верный адрес IPv6'
+'IPv6 Address': 'Адрес IPv6'
+'Please enter a valid IPv6 mask': 'Введите верную маску IPv6'
+'IPv6 Mask': 'Маска IPv6'
+'Please enter a valid IPv6 gateway': 'Введите верный шлюз IPv6'
+'IPv6 Gateway': 'Шлюз IPv6'
+'Do you want to enable full DNS Recursion?': 'Вы хотите включить DNS рекурсию?'
+'Configure DNS Recursion': 'Настройка DNS рекурсии'
+'Please enter the primary DNS address': 'Введите основной DNS адрес'
+'Primary DNS': 'Основной DNS'
+'Please enter the secondary DNS address': 'Введите дополнительный DNS адрес'
+'Secondary DNS': 'Дополнительный DNS'
+'Please enter the username for the admin web interface': 'Введите имя пользователя администратора веб-интерфейса'
+'Web Admin Username': 'Имя пользователя администратора'
+'Please enter the web admin password': 'Введите пароль администратора'
+'Please re-enter the web admin password': 'Повторно введите пароль администратора'
+'Web Admin Password': 'Пароль администратора'
+'Please enter the username for the admin console interface': 'Введите имя пользователя администратора консольного интерфейса'
+'Console Admin Username': 'Имя пользователя администратора консоли'
+'Please enter the console admin password': 'Введите пароль администратора консоли'
+'Please re-enter the console admin password': 'Повторно введите пароль администратора консоли'
+'Console Admin Password': 'Пароль администратора консоли'
+'Do you want to install hypervisor tools for your hypervisor?': 'Вы хотите установить набор инструментов и драйвером для вашего гипервизора?'
+'Configure Hypervisor Tools': 'Настройка инструментов гипервизора'
+'Is the host set to UTC time?': 'Настроен ли на хосте часовой пояс UTC?'
+'Configure UTC Time': 'Настройка часового пояса UTC'
+Timezone: Часовой пояс
+'Timezone Selection': 'Выбор часового пояса'
+'Please enter the IP or hostname of the local mail server': 'Введите IP-адрес или имя хоста локального почтового сервера'
+'Local Mail Server': 'Локальный почтовый сервер'
+'Please enter your IANA country code': 'Введите IANA код страны (например ru)'
+'IANA Code': 'IANA код'
+'Please enter your organization name (No spaces, dots, or underscores)': 'Введите название своей организации (без пробелов, точек или символов подчеркивания)'
+'Organization Name': 'Название организации'
+'Enable Recursion': 'Включить рекурсию'
+'DNS Primary Address': 'Основной DNS адрес'
+'Set DNS': 'Установить DNS'
+'DNS Secondary Address': 'Дополнительный DNS адрес'
+'Configure IPv4': 'Настройка IPv4'
+'Set IP Address': 'Установить IP-адрес'
+'Set IP Netmask': 'Установить маску подсети'
+'Set IP Gateway': 'Установить шлюз'
+'Host is UTC': 'UTC хоста'
+'Set IP Mask': 'Установить IP маску'
+'IANA Country Code': 'IANA код страны'
