French translations update
Former-commit-id: 3f6f4c46a5337ae72e61eaff544f76a44ea76417

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
@@ -2,7 +2,7 @@
 Language: Langue
 Next: Suivant
 Hostname: 'Nom d''hôte'
-'Please enter a hostname': 'Merci da saisir un nom d''hôte'
+'Please enter a hostname': 'Merci de saisir un nom d''hôte'
 Back: Précédent
 English: English
 Danish: __Danish
@@ -17,7 +17,7 @@ Italian: Italiano
 'Domain Name': 'Nom de Domaine'
 'Please enter a domain name': 'Merci de saisir un nom de domaine'
 Email: Courriel
-'Please enter an email address for important notifications': 'Merci de saisir une adresse email pour les notifications importantes'
+'Please enter an email address for important notifications': 'Merci de saisir une adresse de courriel pour les notifications importantes'
 'IPv4 Address': 'Adresse IPv4'
 'Please enter a valid IPv4 address': 'Merci de saisir une adresse IPv4 valide'
 'Please enter a valid IPv4 address': 'Merci de saisir une adresse IPv4 correcte'
@@ -39,17 +39,17 @@ Email: Courriel
 'Do you want to enable full DNS Recursion?': 'Voulez-vous activer la récursivité DNS complète ?'
 'Configure DNS Recursion': 'Configurer la récursivité DNS'
 'Please enter the primary DNS address': 'Merci de saisir l''adresse du serveur DNS primaire'
-'Primary DNS': 'DNS primaire'
+'Primary DNS': 'Serveur DNS primaire'
 'Please enter the secondary DNS address': 'Merci de saisir l''adresse du serveur DNS secondaire'
-'Secondary DNS': 'DNS secondaire'''accès à l''interface d''administration web'
-'Web Admin Username': 'Nom d''utilisateur administrateur pour l''interface d''administration web'
-'Please enter the web admin password': 'Merci de saisir le mot de passe pour l'accès à l''interface d''administration web'
-'Please re-enter the web admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l''accès à l''interface d''administration web'
+'Secondary DNS': 'Serveur DNS secondaire'
+'Web Admin Username': 'Nom d'utilisateur administrateur pour l''interface d''administration web'
+'Please enter the web admin password': 'Merci de saisir le mot de passe pour l''accès à l''interface d''administration web'
+'Please re-enter the web admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l''accès à l''interface d'administration web'
 'Web Admin Password': 'Mot de passe administrateur pour l''interface d''administration web'
 'Please enter the username for the admin console interface': 'Merci de saisir le mot de passe pour l''accès à la console d''administration'
 'Console Admin Username': 'Nom d'utilisateur administrateur pour la console d''administration'
-'Please enter the console admin password': 'Merci de saisir le mot de passe pour l'accès à la console d'administration'
-'Please re-enter the console admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l'accès à la console d''administration'
+'Please enter the console admin password': 'Merci de saisir le mot de passe pour l''accès à la console d''administration'
+'Please re-enter the console admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l''accès à la console d''administration'
 'Console Admin Password': 'Mot de passe administrateur pour la console d''administration'
 'Do you want to install hypervisor tools for your hypervisor?': 'Voulez-vous installer les outils additionnels pour votre hyperviseur ?'
 'Configure Hypervisor Tools': 'Configurer les outils additionnels pour votre hyperviseur'
@@ -57,7 +57,7 @@ Email: Courriel
 'Configure UTC Time': 'Configurer l''heure UTC'
 Timezone: 'Fuseau Horaire'
 'Timezone Selection': 'Sélection du Fuseau Horaire'
-'Please enter the IP or hostname of the local mail server': 'Merci de saisir l''IP ou le nom d'hôte du serveur de messagerie local'
+'Please enter the IP or hostname of the local mail server': 'Merci de saisir l''IP ou le nom d''hôte du serveur de messagerie local'
 'Local Mail Server': 'Serveur de messagerie local'
 'Please enter your IANA country code': 'Merci de saisir votre code pays IANA [FR]'
 'IANA Code': 'Code pays IANA [FR]'
@@ -79,7 +79,7 @@ Timezone: 'Fuseau Horaire'
 'IPv6 Mask': 'Masque IPv6 :'
 'IPv6 Gateway:' : 'Passerelle IPv6 :'
 'Web Admin Username:': 'Nom d''utilisateur administrateur pour l''interface d''administration web :'
-'Web Admin Password:': 'Mot de passe administrateur pour l''interface d''administration web :'
+'Web Admin Password:': 'Mot de passe administrateur pour l'interface d''administration web :'
 'Console Admin Username:': 'Nom d''utilisateur administrateur pour la console d''administration :'
 'Console Admin Password:': 'Mot de passe administrateur pour la console d''administration :'
 'Server Mail Locale:' 'Serveur de messagerie local :'
