Simplified Chinese translations update
Former-commit-id: 2d1a2c9762b32f6cda989c85ed12281d53bd820c [formerly c5c95378f9dd8ce6385f253fb9e556e4ffd918c2]
Former-commit-id: e57904c2a2c5778ff3c1962b67107fdad5c4f1f6

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
@@ -1,22 +1,76 @@
-'Welcome to': '歡迎'
-Language: 語言
-Next: 下一個
-Hostname: 主機名稱
-'Please enter a hostname': '請輸入主機名稱'
-Back: 返回
-English: English
-Danish: __Danish
-Dutch: Nederlands
-French: Français
-Portuguese: Portugues
-German: Deutsche
-Turkish: __Turkish
-Italian: Italiano
-'Simplified Chinese': 簡體中文
-'Traditional Chinese': 繁體中文
+'Welcome to': '欢迎'
+'Language': '语言'
+'Next': '下一个'
+'Hostname': '主机名'
+'Please enter a hostname': '请输入主机名'
+'Back': '上一个'
+'English': 'English'
+'Danish': '__Danish'
+'Dutch': 'Nederlands'
+'French': 'Français'
+'Portuguese': 'Portugues'
+'German': 'Deutsche'
+'Turkish': '__Turkish'
+'Italian': 'Italiano'
+'Simplified Chinese': '简体中文'
+'Traditional Chinese': '繁體中文'
 'Domain Name': '域名'
-'Please enter a domain name': '請輸入域名'
-Email: 電子郵箱地址
-'Please enter an email address for important notifications': '請輸入能夠接收重要通知的電子郵箱地址'
-'IPv4 Address': 'IPv4 地址'
-'Please enter a valid IPv4 address': '請輸入有效的 IPv4 地址'
+'Please enter a domain name': '请输入域名'
+'Email': '电子邮箱地址'
+'Please enter an email address for important notifications': '请输入能够接收重要通知的电子邮箱地址'
+'IPv4 Address': 'IPv4地址'
+'Please enter a valid IPv4 address': '请输入有效的IPv4地址'
+'IPv4 Netmask': 'IPv4子网掩码'
+'Please enter a valid IPv4 netmask': '请输入有效的IPv4子网掩码'
+'Please enter a valid IPv4 gateway': '请输入有效的IPv4网关'
+'IPv4 Gateway': 'IPv4网关'
+'Do you want to set a static IPv4 address?': '是否要设置静态IPv4地址？'
+'Yes': '是'
+'No': '否'
+'Do you want to set a static IPv6 address?': '是否要设置静态IPv6地址？'
+'Configure IPv6': '配置IPv6'
+'Please enter a valid IPv6 address': '请输入有效的IPv6地址'
+'IPv6 Address': 'IPv6地址'
+'Please enter a valid IPv6 mask': '请输入有效的IPv6子网掩码'
+'IPv6 Mask': 'IPv6子网掩码'
+'Please enter a valid IPv6 gateway': '请输入有效的IPv6网关'
+'IPv6 Gateway': 'IPv6网关'
+'Do you want to enable full DNS Recursion?': '是否要启用完全DNS递归？'
+'Configure DNS Recursion': '配置DNS递归'
+'Please enter the primary DNS address': '请输入主DNS地址'
+'Primary DNS': '主DNS'
+'Please enter the secondary DNS address': '请输入辅助DNS地址'
+'Secondary DNS': '辅助DNS'
+'Please enter the username for the admin web interface': '请输入网页系统管理员用户名'
+'Web Admin Username': '网页系统管理员用户名'
+'Please enter the web admin password': '请输入网页系统管理员密码'
+'Please re-enter the web admin password': '请重新输入网页系统管理员密码'
+'Web Admin Password': '网页系统管理员密码'
+'Please enter the username for the admin console interface': '请输入控制台管理员用户名'
+'Console Admin Username': '控制台管理员用户名'
+'Please enter the console admin password': '请输入控制台管理员密码'
+'Please re-enter the console admin password': '请重新输入控制台管理员密码'
+'Console Admin Password': '控制台管理员密码'
+'Do you want to install hypervisor tools for your hypervisor?': '是否要为管理程序安装虚拟机管理程序工具？'
+'Configure Hypervisor Tools': '配置管理程序工具'
+'Is the host set to UTC time?': '主机是否设置为UTC时间？'
+'Configure UTC Time': '配置UTC时间'
+'Timezone': '时区'
+'Timezone Selection': '时区选择'
+'Please enter the IP or hostname of the local mail server': '请输入本地邮件服务器的IP地址或者主机名'
+'Local Mail Server': '本地邮件服务器'
+'Please enter your IANA country code': '请输入您的国家顶级域名'
+'IANA Code': '国家顶级域名'
+'Please enter your organization name (No spaces, dots, or underscores)': '请输入您的组织名称（只可以是汉字、数字或英文字母）'
+'Organization Name': '组织名称'
+'Enable Recursion': '启用递归'
+'DNS Primary Address': 'DNS主要地址'
+'Set DNS': '设置DNS'
+'DNS Secondary Address': 'DNS辅助地址'
+'Configure IPv4': '配置IPv4'
+'Set IP Address': '设置IP地址'
+'Set IP Netmask': '设置IP子网掩码'
+'Set IP Gateway': '设置IP网关'
+'Host is UTC': '主机为UTC时间'
+'Set IP Mask': '设置IP子网掩码'
+'IANA Country Code': '国家顶级域名'
