Change ipv6 mask to ipv6 prefix
Former-commit-id: 8a209466f3a71988ed9ba660acc3556445d16805 [formerly ac6b83a3f9e1972f4e3a25c06eea108801f08076 [formerly ca66640e5e7db43b92c3be5bcca809e6b84a4ec2]]
Former-commit-id: ac6b83a3f9e1972f4e3a25c06eea108801f08076
Former-commit-id: c51a98fb1915ed1b9422f70c87c5d75b0439968c

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.en.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.en.yml
@@ -31,8 +31,8 @@ Email: Email
 'Configure IPv6': 'Configure IPv6'
 'Please enter a valid IPv6 address': 'Please enter a valid IPv6 address'
 'IPv6 Address': 'IPv6 Address'
-'Please enter a valid IPv6 mask': 'Please enter a valid IPv6 mask'
-'IPv6 Mask': 'IPv6 Mask'
+'Please enter a valid IPv6 prefix': 'Please enter a valid IPv6 prefix'
+'IPv6 Prefix': 'IPv6 Prefix'
 'Please enter a valid IPv6 gateway': 'Please enter a valid IPv6 gateway'
 'IPv6 Gateway': 'IPv6 Gateway'
 'Do you want to enable full DNS Recursion?': 'Do you want to enable full DNS Recursion?'
