--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
@@ -32,8 +32,8 @@ Email: Courriel
 'Configure IPv6': 'Configurer IPv6'
 'Please enter a valid IPv6 address': 'Merci de saisir une adresse IPv6 correcte'
 'IPv6 Address': 'Adresse IPv6'
-'Please enter a valid IPv6 mask': 'Merci de saisir un masque IPv6 correcte'
-'IPv6 Mask': 'Masque IPv6'
+'Please enter a valid IPv6 prefix': 'Merci de saisir un __prefix IPv6 correcte'
+'IPv6 Prefix': '__IPv6 Prefix'
 'Please enter a valid IPv6 gateway': 'Merci de saisir une passerelle IPv6 correcte'
 'IPv6 Gateway': 'Passerelle IPv6'
 'Do you want to enable full DNS Recursion?': 'Voulez-vous activer la récursivité DNS complète ?'
