--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.it.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.it.yml
@@ -31,8 +31,8 @@ Email: Email
 'Configure IPv6': 'Configura IPv6'
 'Please enter a valid IPv6 address': 'Inserisci un indirizzo IPv6 corretto'
 'IPv6 Address': 'Indirizzo IPv6'
-'Please enter a valid IPv6 mask': 'Inserisci una netmask IPv6 corretta'
-'IPv6 Mask': 'IPv6 Mask'
+'Please enter a valid IPv6 prefix': 'Inserisci una __prefix IPv6 corretta'
+'IPv6 Prefix': 'IPv6 Prefix'
 'Please enter a valid IPv6 gateway': 'Inserisci un gateway IPv6 corretto'
 'IPv6 Gateway': 'IPv6 Gateway'
 'Do you want to enable full DNS Recursion?': 'Vuoi abilitare la ricorsione DNS?'
