--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
@@ -31,8 +31,8 @@
 'Configure IPv6': '配置IPv6'
 'Please enter a valid IPv6 address': '请输入有效的IPv6地址'
 'IPv6 Address': 'IPv6地址'
-'Please enter a valid IPv6 mask': '请输入有效的IPv6子网掩码'
-'IPv6 Mask': 'IPv6子网掩码'
+'Please enter a valid IPv6 prefix': '__Please enter a valid IPv6 prefix'
+'IPv6 Prefix': 'IPv6 __Prefix'
 'Please enter a valid IPv6 gateway': '请输入有效的IPv6网关'
 'IPv6 Gateway': 'IPv6网关'
 'Do you want to enable full DNS Recursion?': '是否要启用完全DNS递归？'
