--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
@@ -1,25 +1,24 @@
 'Welcome to': 'Bienvenue dans'
-Language: Langue
-Next: Suivant
-Hostname: 'Nom d''hôte'
+'Language': 'Langue'
+'Next': 'Suivant'
+'Hostname': 'Nom d''hôte'
 'Please enter a hostname': 'Merci de saisir un nom d''hôte'
-Back: Précédent
-English: English
-Danish: __Danish
-Dutch: Nederlands
-French: Français
-Portuguese: Portugues
-German: Deutsche
-Turkish: __Turkish
-Italian: Italiano
-'Simplified Chinese': 簡體中文
-'Traditional Chinese': 繁體中文
+'Back': 'Précédent'
+'English': 'English'
+'Danish': '__Danish'
+'Dutch': 'Nederlands'
+'French': 'Français'
+'Portuguese': 'Portugues'
+'German': 'Deutsche'
+'Turkish': '__Turkish'
+'Italian': 'Italiano'
+'Simplified Chinese': '簡體中文'
+'Traditional Chinese': '繁體中文'
 'Domain Name': 'Nom de Domaine'
 'Please enter a domain name': 'Merci de saisir un nom de domaine'
-Email: Courriel
+'Email': 'Courriel'
 'Please enter an email address for important notifications': 'Merci de saisir une adresse de courriel pour les notifications importantes'
 'IPv4 Address': 'Adresse IPv4'
-'Please enter a valid IPv4 address': 'Merci de saisir une adresse IPv4 valide'
 'Please enter a valid IPv4 address': 'Merci de saisir une adresse IPv4 correcte'
 'IPv4 Netmask': 'Masque IPv4'
 'Please enter a valid IPv4 netmask': 'Merci de saisir un masque IPv4 correcte'
@@ -44,18 +43,18 @@ Email: Courriel
 'Secondary DNS': 'Serveur DNS secondaire'
 'Web Admin Username': 'Nom d'utilisateur administrateur pour l''interface d''administration web'
 'Please enter the web admin password': 'Merci de saisir le mot de passe pour l''accès à l''interface d''administration web'
-'Please re-enter the web admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l''accès à l''interface d'administration web'
+'Please re-enter the web admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l''accès à l''interface d''administration web'
 'Web Admin Password': 'Mot de passe administrateur pour l''interface d''administration web'
 'Please enter the username for the admin console interface': 'Merci de saisir le mot de passe pour l''accès à la console d''administration'
-'Console Admin Username': 'Nom d'utilisateur administrateur pour la console d''administration'
+'Console Admin Username': 'Nom d''utilisateur administrateur pour la console d''administration'
 'Please enter the console admin password': 'Merci de saisir le mot de passe pour l''accès à la console d''administration'
 'Please re-enter the console admin password': 'Merci de saisir une nouvelle fois le mot de passe pour l''accès à la console d''administration'
 'Console Admin Password': 'Mot de passe administrateur pour la console d''administration'
 'Do you want to install hypervisor tools for your hypervisor?': 'Voulez-vous installer les outils additionnels pour votre hyperviseur ?'
 'Configure Hypervisor Tools': 'Configurer les outils additionnels pour votre hyperviseur'
-'Is the host set to UTC time?': 'L''hôte est-il réglé sur l'heure UTC ? '
+'Is the host set to UTC time?': 'L''hôte est-il réglé sur l''heure UTC ? '
 'Configure UTC Time': 'Configurer l''heure UTC'
-Timezone: 'Fuseau Horaire'
+'Timezone': 'Fuseau Horaire'
 'Timezone Selection': 'Sélection du Fuseau Horaire'
 'Please enter the IP or hostname of the local mail server': 'Merci de saisir l''IP ou le nom d''hôte du serveur de messagerie local'
 'Local Mail Server': 'Serveur de messagerie local'
@@ -70,15 +69,16 @@ Timezone: 'Fuseau Horaire'
 'Set IP Address': 'Déterminer l''adresse IP'
 'Set IP Netmask': 'Déterminer le masque'
 'Set IP Gateway': 'Déterminer la passerelle'
-'Host is UTC': 'L''hôte est configuré sur l'heure UTC'
+'Host is UTC': 'L''hôte est configuré sur l''heure UTC'
 'Set IP Mask': 'Déterminer le masque'
 'IANA Country Code': 'Code pays IANA [FR]'
-'IPv4 Netmask:' : 'Masque IPv4 :'
-'IPv4 Gateway:' : 'Passerelle IPv4 :'
-'IPv6 Mask': 'Masque IPv6 :'
-'IPv6 Gateway:' : 'Passerelle IPv6 :'
+'IPv4 Netmask:': 'Masque IPv4 :'
+'IPv4 Gateway:': 'Passerelle IPv4 :'
+'IPv6 Mask:': 'Masque IPv6 :'
+'IPv6 Gateway:': 'Passerelle IPv6 :'
 'Web Admin Username:': 'Nom d''utilisateur administrateur pour l''interface d''administration web :'
-'Web Admin Password:': 'Mot de passe administrateur pour l'interface d''administration web :'
+'Web Admin Password:': 'Mot de passe administrateur pour l''interface d''administration web :'
 'Console Admin Username:': 'Nom d''utilisateur administrateur pour la console d''administration :'
 'Console Admin Password:': 'Mot de passe administrateur pour la console d''administration :'
-'Server Mail Locale:' 'Serveur de messagerie local :'
+'Server Mail Locale:': 'Serveur de messagerie local :'
+
