--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
@@ -31,8 +31,8 @@ Email: Email
 'Configure IPv6': 'Настройка IPv6'
 'Please enter a valid IPv6 address': 'Введите верный адрес IPv6'
 'IPv6 Address': 'Адрес IPv6'
-'Please enter a valid IPv6 prefix': 'Введите верную __prefix IPv6'
-'IPv6 Prefix': '__Prefix IPv6'
+'Please enter a valid IPv6 prefix': 'Введите верный префикс IPv6'
+'IPv6 Prefix': 'Префикс IPv6'
 'Please enter a valid IPv6 gateway': 'Введите верный шлюз IPv6'
 'IPv6 Gateway': 'Шлюз IPv6'
 'Do you want to enable full DNS Recursion?': 'Вы хотите включить DNS рекурсию?'
