Add greek language in messages

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
@@ -12,6 +12,7 @@ Portuguese: Πορτογαλικά
 German: Γερμανικά
 Turkish: Τούρικα
 Italian: Ιταλικά
+Greek: Ελληνικά
 'Simplified Chinese': 'Απλοποιημένα Κινέζικα'
 'Traditional Chinese': 'Παραδοσιακά Κινέζικα'
 'Domain Name': 'Όνομα Τομέα'
