--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.en.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.en.yml
@@ -12,6 +12,7 @@ Portuguese: Portugues
 German: Deutsche
 Turkish: Turkish
 Italian: Italiano
+Greek: Ελληνικά
 'Simplified Chinese': 簡體中文
 'Traditional Chinese': 繁體中文
 'Domain Name': 'Domain Name'
