--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
@@ -34,13 +34,13 @@ Email: Email
 'IPv6 Address': 'IPv6 Address'
 'Please enter a valid IPv6 prefix': 'Παρακαλώ εισάγετε ένα έγκυρο IPv6 πρόθεμα'
 'IPv6 Prefix': 'IPv6 Prefix'
-'Please enter a valid IPv6 gateway': 'Παρακαλώ εισάγετε μια έγκυρη IPv6 δικτύου''
+'Please enter a valid IPv6 gateway': 'Παρακαλώ εισάγετε μια έγκυρη IPv6 πύλη δικτύου'
 'IPv6 Gateway': 'IPv6 Gateway'
 'Do you want to enable full DNS Recursion?': 'Θέλετε να ενεργοποιήσετε πλήρες DNS Recursion;'
 'Configure DNS Recursion': 'Ρύθμιση DNS Recursion'
-'Please enter the primary DNS address': 'Παρακαλώ εισάγετε τη διεύθυνση του πρωτεύον DNS εξυπηρετητής'
+'Please enter the primary DNS address': 'Παρακαλώ εισάγετε τη διεύθυνση του πρωτεύον DNS εξυπηρετητή'
 'Primary DNS': 'Πρωτεύον DNS Εξυπηρετητής'
-'Please enter the secondary DNS address': 'Παρακαλώ εισάγετε τη διεύθυνση του δευτερεύων DNS εξυπηρετητής'
+'Please enter the secondary DNS address': 'Παρακαλώ εισάγετε τη διεύθυνση του δευτερεύων DNS εξυπηρετητή'
 'Secondary DNS': 'Δευτερεύων DNS Εξυπηρετητής'
 'Please enter the username for the admin web interface': 'Παρακαλώ εισάγετε το όνομα χρήστη για την ιστοσελίδα διαχείρισης'
 'Web Admin Username': 'Όνομα Χρήστη Ιστοσελίδας Διαχείρισης'
