--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
@@ -60,7 +60,7 @@ Timezone: 'Ζώνη Ώρας'
 'Timezone Selection': 'Επιλογή Ζώνης Ώρας'
 'Please enter the IP or hostname of the local mail server': 'Παρακαλώ εισάγετε την IP ή το όνομα του τοπικού εξυπηρετητή ηλεκτρονικής αλληλογραφίας'
 'Local Mail Server': 'Τοπικός Εξυπηρετητής Ηλεκτρονικής Αλληλογραφίας'
-'Please enter your IANA country code': 'Παρακαλώ εισάγετε τον κωδικό IANA της χώρας'
+'Please enter your IANA country code': 'Παρακαλώ εισάγετε τον κωδικό IANA της χώρας σας'
 'Please enter your organization name (No spaces, dots, or underscores)': 'Παρακαλώ εισάγετε το όνομα του οργανισμού σας (Χωρίς κενά, τελείες ή κάτω παύλες'
 'Organization Name': 'Όνομα Οργανισμού'
 'Enable Recursion': 'Ενεργοποίηση Recursion'
